<resources>
    <string name="qingzhuyipingmu1">请注意,一定要在屏幕大块空白处进行过足够多的划线测试</string>
    <string name="qingzhuyipingmu2">请注意,是否有在屏幕大块空白处进行过足够多的划线测试</string>
    <string name="menu_settings">help</string>
    <string name="title_activity_sensor">Gsensor Calibrate</string>
    <string name="cali_success">Gsensor is calibrated successfully!</string>
    <string name="cali_fail">Gsensor calibrated failed!</string>
    <string name="waiting">Waiting...</string>
    <string name="cali_prompt">Now calibrating sensor, please keep device horizontally and don\'t move!</string>
    <string name="operation_guide">Help:\t Please keep device horizontally and don\'t move!\n\t\t\tTouch \"Calibrate Button\".\n</string>
    <string name="cali_down">Calibrate (z Down)</string>
    <string name="cali_up">Calibrate</string>
    <string name="cali_exit">Exit App</string>
    <string name="chip_not_found">Sorry, current used gsensor is not provided by MiraMEMS, the calibraste function will be disabled!</string>
    <string name="hello">欢迎来到工厂模式</string>
    <string name="touch_head">头部触摸</string>
    <string name="touch_back">脖子触摸</string>
    <string name="touch_left">左肩触摸</string>
    <string name="touch_right">右肩触摸</string>
    <string name="touch_middle">人体感应</string>
    <string name="start_dialog">开始测试手机信号</string>
    <string name="touch">感应测试</string>
    <string name="gsensor">重力感应校准</string>
    <string name="descriton_touch">1.点击开启触摸测试\n2.分别触摸机器人头部,脖子(屏幕下方),左肩,右肩触发触摸感应\n3.在机器人屏幕下方的的圆口前进行人体晃动，触发人体感应\n4.成功后对应方框会由红色显示为绿色且tips会有相应提示</string>
    <string name="start_touch">开启触摸测试</string>
    <string name="stop_touch">停止触摸测试</string>
    <string name="desription_infrared">1.点击发送红外测试\n2.打开手机摄像头对准机器人头部圆圈部分\n3.观察手机屏幕中是否有五个指示灯亮起\n4.若亮起,则测试成功</string>
    <string name="infrared">红外测试</string>
    <string name="send_infrared">发送红外信号</string>
    <string name="stop_infrared">停止发送红外</string>
    <string name="increase_volume">增加媒体音量</string>
    <string name="decrease_volume">减小媒体音量</string>
    <string name="modify_volume">调节音量</string>
    <string name="motor_up">头向上</string>
    <string name="motor_down">头向下</string>
    <string name="motor_head_left">头向左</string>
    <string name="motor_head_right">头向右</string>
    <string name="motor">马 达</string>
    <string name="version_barcode">校准参数:</string>
    <string name="version_cant">找不到校准参数</string>
    <string name="description">进入到每个测试模块后,根据测试结果选择成功或者失败,点击成功或者后都会返回到主界面,如果选择测试结果为失败,在主界面该模块会显示为红色,成功则显示蓝色</string>
    <string name="click_here">点击这里退出工厂模式</string>
    <string name="click_here2">点击这里查看版本及使用说明</string>
    <string name="back">后退</string>
    <string name="app_name">工厂模式</string>
    <string name="Settings">设置</string>
    <string name="AutoTest">夹具测试</string>
    <string name="AllTest">整机测试</string>
    <string name="Packageerror">出错了,无法找到应用包！</string>
    <string name="PackageIerror">内部错误</string>
    <string name="BatteryLog">电源</string>
    <string name="battery_info_status_label">充电状态:</string>
    <string name="battery_info_scale_label">电池电量:</string>
    <string name="battery_info_level_label">当前电量:</string>
    <string name="battery_info_health_label">电源状况:</string>
    <string name="battery_info_technology_label">电源技术:</string>
    <string name="battery_info_voltage_label">当前电压:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">电源温度:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">自启动的时间:</string>
    <string name="battery_info_awake_battery">对电池唤醒时间:</string>
    <string name="battery_info_awake_plugged">充电时间:</string>
    <string name="battery_info_screen_on">屏幕打开时间:</string>
    <string name="battery_info_status_unknown">未知</string>
    <string name="battery_info_status_charging">充电</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">未充电</string>
    <string name="battery_info_status_full">满</string>
    <string name="battery_info_health_unknown">未知</string>
    <string name="battery_info_health_good">很好</string>
    <string name="battery_info_health_overheat">过热</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">电压过高</string>
    <string name="battery_info_health_unspecified_failure">未知错误</string>
    <string name="TouchScreen">触屏</string>
    <string name="PointTest">点测试</string>
    <string name="LineTest">线测试</string>
    <string name="Result">查看结果</string>
    <string name="Offset">偏移量：</string>
    <string name="TouchComplete">测试完成</string>
    <string name="Error">错误</string>
    <string name="DrawError">绘制出错！</string>
    <string name="Again">重试</string>
    <string name="GoOn">继续</string>
    <string name="BackLight">背光亮度</string>
    <string name="Display_lcd_Text">背景灯</string>
    <string name="Memory">内存</string>
    <string name="Audio">声音</string>
    <string name="Camera">相机</string>
    <string name="Camera_takepic">拍照</string>
    <string name="Camera_notfound">未检测到前置摄像头</string>
    <string name="WiFi">WiFi</string>
    <string name="WiFi_success">测试成功</string>
    <string name="WiFi_failed">测试失败</string>
    <string name="WiFi_scaning">正在查找中...</string>
    <string name="WiFi_info_closeing">wifi正在关闭中...</string>
    <string name="WiFi_info_close">wifi已经关闭</string>
    <string name="WiFi_info_opening">wifi正在打开</string>
    <string name="WiFi_info_open">wifi已经打开</string>
    <string name="WiFi_info_unknown">未知状态</string>
    <string name="WiFi_connecting">正在连接...</string>
    <string name="WiFi_notfound_openap">未找到开放的连接点</string>
    <string name="HeadSet">耳机</string>
    <string name="HeadSet_plugged">耳机插入</string>
    <string name="HeadSet_unplugged">耳机拔出</string>
    <string name="HeadSet_tips">请插入耳机进行测试</string>
    <string name="HeadSet_hook">按下耳机Hook键!</string>
    <string name="HeadSet_hook_message">请确认拨打电话时长按耳机Hook键是否可以挂断?</string>
    <string name="GPS">GPS</string>
    <string name="GPS_open">请打开GPS</string>
    <string name="GPS_connect">GPS 已打开, 正在连接...</string>
    <string name="GPS_normal">GPS 正常</string>
    <string name="GPS_satelliteNum">GPS 已搜索到卫星数 :</string>
    <string name="GPS_Signal">GPS 信号 :</string>
    <string name="GPS_Success">成功</string>
    <string name="GPS_time">耗时： %s 分</string>
    <string name="Sensor">传感器</string>
    <string name="Vibrator">震动</string>
    <string name="Signal">电话</string>
    <string name="YGPS">YGPS</string>
    <string name="AGPS">AGPS</string>
    <string name="Microphone">麦克风</string>
    <string name="Mic_start">开始录音</string>
    <string name="Mic_stop">停止录音并播放</string>
    <string name="Mic_play">开始播放</string>
    <string name="Mic_operation">麦克风选项</string>
    <string name="Speaker_operation">喇叭选项</string>
    <string name="Bluetooth">蓝牙</string>
    <string name="Bluetooth_open">蓝牙已经打开</string>
    <string name="Bluetooth_opening">蓝牙正在打开...</string>
    <string name="Bluetooth_scaning">正在查找...</string>
    <string name="Bluetooth_mac">MAC地址:</string>
    <string name="Bluetooth_scan_success">查找完成</string>
    <string name="GSensor">重力传感器</string>
    <string name="GSensor_info">竖立,平放,侧立,观察重力变化!</string>
    <string name="MSensor">磁力传感器</string>
    <string name="MSensor_default_text">未知数据</string>
    <string name="MSensor_North">正北</string>
    <string name="MSensor_East">正东</string>
    <string name="MSensor_South">正南</string>
    <string name="MSensor_West">正西</string>
    <string name="MSensor_north_east">北偏东</string>
    <string name="MSensor_south_east">南偏东</string>
    <string name="MSensor_south_west">南偏西</string>
    <string name="MSensor_north_west">北偏西</string>
    <string name="LSensor">光传感器</string>
    <string name="LSensor_default_text">未知数据</string>
    <string name="LSensor_accuracy">精度:</string>
    <string name="LSensor_value">数值:</string>
    <string name="LSensor_tips">在强光和黑暗地方观察数值变化,或者用手遮挡感应器</string>
    <string name="LCD_increase">强背光</string>
    <string name="LCD_weaken">弱背光</string>
    <string name="Success">成功</string>
    <string name="Failed">失败</string>
    <string name="psensor_hello">PSensor 验证</string>
    <string name="psensor_app_name">距离传感器</string>
    <string name="proximity">接近 :</string>
    <string name="tips">请将手放置和离开感应区观看数值变化!</string>
    <string name="Earphone">听筒</string>
    <string name="battery_name">电 源</string>
    <string name="description_battery">插入DC接口检查充电状态,同时检查机器人胸前充电指示灯是否亮起</string>
    <string name="touchscreen_name">触 屏</string>
    <string name="speaker_name">喇 叭</string>
    <string name="wifi_name">WiFi</string>
    <string name="bluetooth_name">蓝 牙</string>
    <string name="headset_name">耳 机</string>
    <string name="earphone_name">听 筒</string>
    <string name="gps_name">GPS</string>
    <string name="vibrator_name">震 动</string>
    <string name="telephone_name">电 话</string>
    <string name="backlight_name">屏幕背光</string>
    <string name="memory_name">内 存</string>
    <string name="gsensor_name">重力传感</string>
    <string name="msensor_name">磁力传感</string>
    <string name="lsensor_name">光传感</string>
    <string name="psensor_name">距离传感</string>
    <string name="camera_name">摄像头</string>
    <string name="sdcard_name">TF-卡/SD-卡</string>
    <string name="fmradio_name">收音机</string>
    <string name="KeyCode_name">按 键</string>
    <string name="lcd_name">LCD</string>
    <string name="sim_name">SIM卡</string>
    <string name="microphone_name">麦克风</string>
    <string name="subcamera_name">前摄像头</string>
    <string name="headsethook_name">耳机Hook</string>
    <string name="sdcard">T卡</string>
    <string name="sdcard_tips_success">已检测到SD卡</string>
    <string name="sdcard_tips_failed">没有测到SD卡</string>
    <string name="sdcard_totalsize">总容量:</string>
    <string name="sdcard_freesize">剩余容量:</string>
    <string name="FMRadio">收音机</string>
    <string name="FMRadio_notice">选择</string>
		<string name="motor_forward">前进</string>
    <string name="motor_back">后退</string>
    <string name="motor_left">原地左转</string>
    <string name="motor_right">原地右转</string>
		<string name="motor_turn_left">轮子停止</string>
    <string name="motor_turn_right">头部回正</string>
		<string name="head_up">横向左移</string>
    <string name="head_down">横向右移</string>
    <string name="head_left">头向左</string>
    <string name="head_right">头向右</string>
    <string name="ultrasonic_on">超声波开</string>
    <string name="ultrasonic_off">超声波关</string>
		<string name="distance_value">00</string>
    <string name="direction_flag">0</string>
		<string name="forward_up">前上1：</string>
    <string name="forward_mid">前中5：</string>
    <string name="forward_down">前下6：</string>
    <string name="forward_left">前左10：</string>
    <string name="forward_right">前右11：</string>
    <string name="back_up">后上2：</string>
    <string name="back_down">后下7：</string>
    <string name="back_left">后左12：</string>
    <string name="back_right">后右13：</string>
    <string name="left_up">左上3：</string>
    <string name="left_down">左下8：</string>
    <string name="right_up">右上4：</string>
    <string name="right_down">右下9：</string>
    <string name="forward_obstacle">前方障碍物：</string>
    <string name="back_obstacle">后方障碍物：</string>
    <string name="left_obstacle">左侧障碍物：</string>
    <string name="right_obstacle">右侧障碍物：</string>
    <string name="forward_left_obstacle">前左障碍物：</string>
    <string name="forward_right_obstacle">前右障碍物：</string>
    <string name="back_left_obstacle">后左障碍物：</string>
    <string name="back_right_obstacle">后右障碍物：</string>
    <string name="btn_mcu_version">获取版本信息</string>
    <string name="txt_mcu_version">版本信息: </string>
    <string name="foot_motor_on">开启底座电机电源</string>
    <string name="foot_motor_off">关闭底座电机电源</string>
    <string name="foot_motor_txt">开启电源，点击前进，是否能够前进。\n关闭电源，点击前进，是否能够前进。</string>
</resources>